<resources>
    <string name="app_name">Stundenplan</string>
    <string name="montag">Mo</string>
    <string name="dienstag">Di</string>
    <string name="mittwoch">Mi</string>
    <string name="donnerstag">Do</string>
    <string name="freitag">Fr</string>
    <string name="stunde1">1</string>
    <string name="stunde2">2</string>
    <string name="stunde3">3</string>
    <string name="stunde4">4</string>
    <string name="stunde5">5</string>
    <string name="stunde6">6</string>
    <string name="stunde7">7</string>
    <string name="stunde8">8</string>
    <string name="stunde9">9</string>
    <string name="stunde10">10</string>
    <string name="title_activity_slider_activity">SliderActivityActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    //Fach Erstellen Activity
    <string name="fach">Fach:</string>
    <string name="kuerzel">Kürzel:</string>
    <string name="raum">Raum:</string>
    <string name="lehrer">Lehrer:</string>
    <string name="speichern">Speichern</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="fachHinzufuegen">Fach hinzufügen</string>
    <string name="fachErstellen">Fach erstellen</string>
    <string name="farbe">Farbe:</string>
    <string name="plus">+</string>
    <string name="title_activity_raum_erstellen">RaumErstellen</string>
    <string name="raumnummer">Raumnummer:</string>
    <string name="raumart">Raumart:</string>


</resources>
