<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="jannikokan.de.stundenplan.MainActivity">


    <TableRow>

        <TextView
            android:id="@+id/textViewLeer"
            android:layout_width="30dp" />

        <TextView
            android:id="@+id/textViewMontag"
            android:layout_width="60dp"
            android:text="@string/montag" />

        <TextView
            android:id="@+id/textViewDienstag"
            android:layout_width="60dp"
            android:text="@string/dienstag" />

        <TextView
            android:id="@+id/textViewMittwoch"
            android:layout_width="60dp"
            android:text="@string/mittwoch" />

        <TextView
            android:id="@+id/textViewDonnerstag"
            android:layout_width="60dp"
            android:text="@string/donnerstag" />

        <TextView
            android:id="@+id/textViewFreitag"
            android:layout_width="60dp"
            android:text="@string/freitag" />


    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/textViewStunde1"
            android:layout_width="30dp"
            android:text="@string/stunde1"/>

        <Button
            android:id="@+id/buttonMontag1"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDienstag1"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonMittwoch1"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDonnerstag1"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonFreitag1"
            android:layout_width="40dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textViewStunde2"
            android:layout_width="30dp"
            android:text="@string/stunde2"
            />

        <Button
            android:id="@+id/buttonMontag2"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDienstag2"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonMittwoch2"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDonnerstag2"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonFreitag2"
            android:layout_width="40dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textViewStunde3"
            android:layout_width="30dp"
            android:text="@string/stunde3"
            />

        <Button
            android:id="@+id/buttonMontag3"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDienstag3"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonMittwoch3"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDonnerstag3"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonFreitag3"
            android:layout_width="40dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textViewStunde4"
            android:layout_width="30dp"
            android:text="@string/stunde4"
            />

        <Button
            android:id="@+id/buttonMontag4"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDienstag4"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonMittwoch4"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDonnerstag4"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonFreitag4"
            android:layout_width="40dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textViewStunde5"
            android:layout_width="30dp"
            android:text="@string/stunde5"
            />

        <Button
            android:id="@+id/buttonMontag5"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDienstag5"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonMittwoch5"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDonnerstag5"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonFreitag5"
            android:layout_width="40dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textViewStunde6"
            android:layout_width="30dp"
            android:text="@string/stunde6"
            />

        <Button
            android:id="@+id/buttonMontag6"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDienstag6"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonMittwoch6"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDonnerstag6"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonFreitag6"
            android:layout_width="40dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textViewStunde7"
            android:layout_width="30dp"
            android:text="@string/stunde7"
            />

        <Button
            android:id="@+id/buttonMontag7"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDienstag7"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonMittwoch7"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDonnerstag7"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonFreitag7"
            android:layout_width="40dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textViewStunde8"
            android:layout_width="30dp"
            android:text="@string/stunde8"
            />

        <Button
            android:id="@+id/buttonMontag8"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDienstag8"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonMittwoch8"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDonnerstag8"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonFreitag8"
            android:layout_width="40dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textViewStunde9"
            android:layout_width="30dp"
            android:text="@string/stunde9"
            />

        <Button
            android:id="@+id/buttonMontag9"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDienstag9"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonMittwoch9"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDonnerstag9"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonFreitag9"
            android:layout_width="40dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/textViewStunde10"
            android:layout_width="30dp"
            android:text="@string/stunde10"
            />

        <Button
            android:id="@+id/buttonMontag10"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDienstag10"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonMittwoch10"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonDonnerstag10"
            android:layout_width="40dp"
            />

        <Button
            android:id="@+id/buttonFreitag10"
            android:layout_width="40dp"
            android:text="Slider" />
    </TableRow>

</TableLayout>


